z-index fix 2

--- a/src/components/post/PostContent.module.scss
+++ b/src/components/post/PostContent.module.scss
@@ -87,5 +87,5 @@
   position: absolute;
   right: 16px;
   top: 20px;
-  z-index: 0;
+  z-index: 1;
 }
